# WR_ws

./: .gitignore  README.md  can_test.py  ros2_bag_to_csv.py  temperature_control_20250226_103504.csv  temperature_control_20250226_112614.csv  temperature_control_20250226_113843.csv  temperature_control_20250226_142427.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/can_comm/lib/can_comm/: can_comm_node
install/can_comm/share/can_comm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_socketcan/include/ros2_socketcan/: socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_receiver_node.hpp  socket_can_sender.hpp  socket_can_sender_node.hpp  visibility_control.hpp
install/ros2_socketcan/lib/ros2_socketcan/: socket_can_receiver_node_exe  socket_can_sender_node_exe
install/ros2_socketcan/share/ros2_socketcan/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_socketcan_msgs/share/ros2_socketcan_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/wearable_robot_bringup/share/wearable_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wearable_robot_control/lib/wearable_robot_control/: actuator_temp_control_node  temperature_logger_node
install/wearable_robot_control/share/wearable_robot_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wearable_robot_data_processing/include/wearable_robot_data_processing/: can_receiver_100_node.hpp  can_receiver_401_node.hpp
install/wearable_robot_data_processing/lib/wearable_robot_data_processing/: IMU_processing_node  can_data_processor  data_parser_node  displacement_data_logger  displacement_processing_node
install/wearable_robot_data_processing/share/wearable_robot_data_processing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wearable_robot_hw/lib/wearable_robot_hw/: CAN_command_transmit_node  CAN_data_extractor_node  CAN_setting_node
install/wearable_robot_hw/share/wearable_robot_hw/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wearable_robot_interfaces/share/wearable_robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
legacy_files/: simple_gui.py  temp_control.ui  temperature_logger_node.cpp
legacy_files/temperature_control_gui/launch/: temperature_control_with_gui.launch.py
legacy_files/temperature_control_gui/temperature_control_gui/: temperature_control_gui.py
legacy_files/wearable_robot_hw/: CMakeLists.txt  package.xml
legacy_files/wearable_robot_hw/src/oldversion/: CAN_command_transmit_node.cpp  CAN_command_transmit_node_v1.cpp  CAN_data_extractor_node_v1.cpp  CAN_data_extractor_node_v2.cpp  CAN_setting_node.cpp  USART_actuator_node.cpp
legacy_files/wearable_robot_ui/launch/: wearable_robot_ui.launch.py
legacy_files/wearable_robot_ui/wearable_robot_ui/: temperature_control_plugin.py
log/: latest_build
src/data_logger/: package.xml  setup.py
src/data_logger/data_logger/: temperature_logger_node.py
src/log/: latest_build
src/temperature_control_gui/: package.xml  plugin.xml  setup.cfg  setup.py
src/temperature_control_gui/launch/: temperature_control_with_gui.launch.py
src/temperature_control_gui/temperature_control_gui/: __init__.py  simple_gui.py  temperature_control_gui.py  temperature_control_gui_node.py
src/wearable_robot_bringup/config/: calibration_params.yaml  serial_params.yaml
src/wearable_robot_bringup/launch/: bringup_all.launch.py  data_processing.launch.py  multi_serial_nodes.launch.py  system.launch.py
src/wearable_robot_control/: CMakeLists.txt  package.xml
src/wearable_robot_control/config/: temperature_control_params.yaml  waist_support_params copy.yaml  waist_support_params.yaml
src/wearable_robot_control/launch/: temperature_control.launch.py
src/wearable_robot_control/src/: actuator_control_node.cpp  body_control_node copy.cpp  command_send_node.cpp  temperature_logger_node.cpp  waist_actuator_control_node.cpp  waist_support_control_node.cpp
src/wearable_robot_data_processing/: CMakeLists.txt  package.xml
src/wearable_robot_data_processing/config/: displacement_calibration_params.yaml
src/wearable_robot_data_processing/src/: can_data_processor.cpp  can_send_node.cpp  data_logger_node.cpp  displacement_data_logger_node.cpp  displacement_processing_node.cpp
src/wearable_robot_interfaces/: CMakeLists.txt  package.xml
src/wearable_robot_interfaces/msg/: ActuatorControlCommand.msg  EmergencyStop.msg  IntensionData.msg
src/wearable_robot_interfaces/srv/: SetControlMode.srv  SetControlParams.srv
src/wearable_robot_rqt_plugins/: package.xml  plugin.xml  setup.py
src/wearable_robot_rqt_plugins/resource/: actuator_control.ui  fan_control.ui  temp_control_v2.ui  waist_control.ui  waist_support_control.ui
src/wearable_robot_rqt_plugins/wearable_robot_rqt_plugins/: actuator_control_plugin.py  temp_control_plugin.py  waist_control_plugin.py
src/wearable_robot_ui/: package.xml  plugin.xml  setup.cfg  setup.py
src/wearable_robot_ui/launch/: wearable_robot_ui.launch.py
src/wearable_robot_ui/wearable_robot_ui/: __init__.py  temperature_control_plugin.py
wearable_robot_ui/: package.xml  setup.py
wearable_robot_ui/data_logger/: package.xml  setup.py
wearable_robot_ui/launch/: wearable_robot_ui.launch.py
wearable_robot_ui/resource/: temperature_control.ui
wearable_robot_ui/wearable_robot_ui/: temperature_control_plugin.py
(+281 files in other folders)
