<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wearable_robot_hw</name>
  <version>1.0.0</version>
  <description>recieve and send the data</description>
  <maintainer email="dongsus41@gmail.com">ds_robottory</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>wearable_robot_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
