<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wearable_robot_ui</name>
  <version>0.1.0</version>
  <description>웨어러블 로봇 시스템의 사용자 인터페이스 패키지</description>
  <maintainer email="dev@example.com">개발자</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>wearable_robot_interfaces</depend>
  <depend>python3-pyqt5</depend>
  <depend>python3-pyqtgraph</depend>
  <depend>python3-numpy</depend>
  <depend>data_logger</depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
